gcc/testsuite/rust/rustc/ui/parser/issues/issue-84148-1_dg.rs
fn f(t:for<>t?)
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }

